maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:12: error: not found: value keepHandOnSideWall
    keepHandOnSideWall()
    ^