maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.code
override def run() {

	gauche()
	if(estFaceMur)
	{
		droite()
	}

    while(!estSurBiscuit)
     {
    keepHandOnSideWall()
    }
}